2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Some fixes.

2013-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Add ambsdtar.
	* application-src/ambsdtar.c: New application script for BSD tar
	* application-src/amgtar.c: Call dbclose()
	* application-src/amstar.c: Call dbclose()
	* client-src/calcsize.c: Handle BSDTAR
	* config/amanda/dumpers.m4 (AMANDA_PROG_BSDTAR): function to find
	  bsdtar binary.
	* configure.in: Call AMANDA_PROG_BSDTAR
	* man/Makefile.am: Add ambsdtar.8
	* man/entities/global.entities.in: Add bsdtar.
	* man/xml-source/ambsdtar.8.xml: New ambsdtar man page
	* perl/Amanda/Constants.pm.in: Add $BSDTAR
	* NEWS, ReleaseNotes: Add ambsdtar

2013-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c (backup_support_option): Do pass pass the
	  --config, --host, --disk and --device
	* client-src/client_util.h (backup_support_option): Change prototype.
	* client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c,  recover-src/extract_list.c: Use new
	  backup_support_option arguments.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix if header have only one
	  application property.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix read from applicaiton stderr.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/disk_history.c: Fix storage setting.

2013-12-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c(update_info_taper): Log a message if label is
	  not set.

2013-12-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.pl: Fix parsing of letter argument.

2013-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Always use the prefix when accessing the
	  bucket.
	* device-src/s3.c (s3_is_bucket_exists): Add prefix as argument.